// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination.vue currentPage=2 1`] = `
"<div class=\\"event_pagination\\">
  <ul>
    <li class=\\"\\">最初</li>
    <li class=\\"\\">前へ</li>
    <li class=\\"page_item\\">1</li>
    <li class=\\"current_page click_disable page_item\\">2</li>
    <li class=\\"page_item\\">3</li>
    <li class=\\"page_item\\">4</li>
    <li class=\\"\\">次へ</li>
    <li class=\\"\\">最後</li>
  </ul>
</div>"
`;

exports[`Pagination.vue currentPage=3 1`] = `
"<div class=\\"event_pagination\\">
  <ul>
    <li class=\\"\\">最初</li>
    <li class=\\"\\">前へ</li>
    <li class=\\"page_item\\">1</li>
    <li class=\\"page_item\\">2</li>
    <li class=\\"current_page click_disable page_item\\">3</li>
    <li class=\\"page_item\\">4</li>
    <li class=\\"page_item\\">5</li>
    <li class=\\"\\">次へ</li>
    <li class=\\"\\">最後</li>
  </ul>
</div>"
`;

exports[`Pagination.vue currentPage=4 1`] = `
"<div class=\\"event_pagination\\">
  <ul>
    <li class=\\"\\">最初</li>
    <li class=\\"\\">前へ</li>
    <li class=\\"page_item\\">2</li>
    <li class=\\"page_item\\">3</li>
    <li class=\\"current_page click_disable page_item\\">4</li>
    <li class=\\"page_item\\">5</li>
    <li class=\\"page_item\\">6</li>
    <li class=\\"\\">次へ</li>
    <li class=\\"\\">最後</li>
  </ul>
</div>"
`;

exports[`Pagination.vue currentPage=10 1`] = `
"<div class=\\"event_pagination\\">
  <ul>
    <li class=\\"\\">最初</li>
    <li class=\\"\\">前へ</li>
    <li class=\\"page_item\\">8</li>
    <li class=\\"page_item\\">9</li>
    <li class=\\"current_page click_disable page_item\\">10</li>
    <li class=\\"page_item\\">11</li>
    <li class=\\"page_item\\">12</li>
    <li class=\\"\\">次へ</li>
    <li class=\\"\\">最後</li>
  </ul>
</div>"
`;

exports[`Pagination.vue currentPage=97 1`] = `
"<div class=\\"event_pagination\\">
  <ul>
    <li class=\\"\\">最初</li>
    <li class=\\"\\">前へ</li>
    <li class=\\"page_item\\">95</li>
    <li class=\\"page_item\\">96</li>
    <li class=\\"current_page click_disable page_item\\">97</li>
    <li class=\\"page_item\\">98</li>
    <li class=\\"page_item\\">99</li>
    <li class=\\"\\">次へ</li>
    <li class=\\"\\">最後</li>
  </ul>
</div>"
`;

exports[`Pagination.vue currentPage=98 1`] = `
"<div class=\\"event_pagination\\">
  <ul>
    <li class=\\"\\">最初</li>
    <li class=\\"\\">前へ</li>
    <li class=\\"page_item\\">96</li>
    <li class=\\"page_item\\">97</li>
    <li class=\\"current_page click_disable page_item\\">98</li>
    <li class=\\"page_item\\">99</li>
    <li class=\\"page_item\\">100</li>
    <li class=\\"\\">次へ</li>
    <li class=\\"\\">最後</li>
  </ul>
</div>"
`;

exports[`Pagination.vue currentPage=99 1`] = `
"<div class=\\"event_pagination\\">
  <ul>
    <li class=\\"\\">最初</li>
    <li class=\\"\\">前へ</li>
    <li class=\\"page_item\\">97</li>
    <li class=\\"page_item\\">98</li>
    <li class=\\"current_page click_disable page_item\\">99</li>
    <li class=\\"page_item\\">100</li>
    <li class=\\"\\">次へ</li>
    <li class=\\"\\">最後</li>
  </ul>
</div>"
`;

exports[`Pagination.vue currentPage=100 1`] = `
"<div class=\\"event_pagination\\">
  <ul>
    <li class=\\"\\">最初</li>
    <li class=\\"\\">前へ</li>
    <li class=\\"page_item\\">98</li>
    <li class=\\"page_item\\">99</li>
    <li class=\\"current_page click_disable page_item\\">100</li>
    <li class=\\"click_disable\\">次へ</li>
    <li class=\\"click_disable\\">最後</li>
  </ul>
</div>"
`;
